--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="keywords" content="NY United SDA Church, community, worship, bible study, youth, music, Sabbath day Adventist Church " />
+    <title>NY United SDA Church</title>
   </head>
   <body>
     <div id="root"></div>
