--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="NY United SDA Church - fostering community worship, bible study, youth engagement, and musical fellowship within the Adventist tradition." />
+    <meta property="og:title" content="NY United SDA Church" />
+    <meta property="og:description" content="Join us for community worship, bible study, and engaging youth programs at NY United SDA Church." />
     <meta name="keywords" content="NY United SDA Church, community, worship, bible study, youth, music, Sabbath day Adventist Church " />
     <title>NY United SDA Church</title>
   </head>
