--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="NY United SDA Church - fostering community worship, bible study, youth engagement, and musical fellowship within the Adventist tradition." />
-    <meta property="og:title" content="NY United SDA Church" />
-    <meta property="og:description" content="Join us for community worship, bible study, and engaging youth programs at NY United SDA Church." />
-    <meta name="keywords" content="NY United SDA Church, community, worship, bible study, youth, music, Sabbath day Adventist Church " />
-    <title>NY United SDA Church</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="NY United SDA Church - fostering community worship, bible study, youth engagement, and musical fellowship within the Adventist tradition." />
+  <meta property="og:title" content="NY United SDA Church" />
+  <meta property="og:description"
+    content="Join us for community worship, bible study, and engaging youth programs at NY United SDA Church." />
+  <meta name="keywords"
+    content="NY United SDA Church, community, worship, bible study, youth, music, Sabbath day Adventist Church " />
+  <title>NY United SDA Church</title>
+
+
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
