feat: update meta keywords for better SEO; add @types/node dependency; remove appConstants file; refactor theme and footer components; enhance routing and layout in Home and ProjectSlider components

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description"
     content="Join us for community worship, bible study, and engaging youth programs at NY United SDA Church." />
   <meta name="keywords"
-    content="NY United SDA Church, community, worship, bible study, youth, music, Sabbath day Adventist Church " />
+    content="NY United SDA Church, community, Live stream, Church service worship, bible study, youth, music, Sabbath day Adventist Church " />
   <title>NY United SDA Church</title>
 
 
