--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <title>NY United SDA Church</title>
 
 
-  <link rel="stylesheet" type="text/css" content="text/css" 
+  <!-- <link rel="stylesheet" type="text/css" content="text/css" 
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
   <link rel="stylesheet" type="text/css" content="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" /> -->
 </head>
 
 <body>
