--- a/index.html
+++ b/index.html
@@ -13,12 +13,49 @@
   <meta name="keywords"
     content="NY United SDA Church, community, Live stream, Church service worship, bible study, youth, music, Sabbath day Adventist Church " />
   <title>NY United SDA Church</title>
+<style>
+  *, *::before,*::after {
+	box-sizing: border-box;
+}
 
+:root {
+	/* Theme variables */
+	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+	width: 100%;
+	height: 100%;
+
+	color-scheme: light dark;
+
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+body {
+	margin: 0;
+	min-width: 320px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+#root {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+}
+</style>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
