feat: implement comprehensive performance optimizations including lazy loading, image enhancements, and caching strategies

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   <meta property="og:title" content="NY United SDA Church" />
   <meta property="og:description"
     content="Join us for community worship, bible study, and engaging youth programs at NY United SDA Church." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo.svg" />
   <meta name="keywords"
-    content="NY United SDA Church, community, Live stream, Church service worship, bible study, youth, music, Sabbath day Adventist Church " />
+    content="NY United SDA Church, community, Live stream, Church service worship, bible study, youth, music, Sabbath day Adventist Church" />
+  <meta name="theme-color" content="#ffffff" />
+  <!-- Preload critical fonts and styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   <title>NY United SDA Church</title>
 <style>
   *, *::before,*::after {
