--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
